integrate paxos simulator with accord